--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
   font-family: "Montserrat", sans-serif;
 }
 
+body{
+  overflow-x: hidden;
+}
 /* Main Section */
 
 .container,
@@ -119,91 +122,7 @@ h4 {
   margin-right: 8px;
 }
 
-@media only screen and (max-width: 768px) {
-  .main-screen {
-    background-image: url("./assets/home-background-tablet.png");
-    background-size: 768px 1090px;
-    height: 1090px;
-    background-color: #f5f5f5;
-  }
 
-  .main-screen-container {
-    padding-left: 24px;
-    padding-right: 24px;
-    max-width: 768px;
-  }
-
-  main {
-    grid-template-columns: minmax(300px, 575px);
-    grid-template-areas:
-      "Text"
-      "Form";
-    justify-content: center;
-    justify-items: center;
-  }
-
-  .text-block {
-    text-align: center;
-    margin-top: 38px;
-  }
-
-  .text-block > {
-    font-size: 18px;
-    line-height: 28px;
-  }
-
-  .form-block {
-    margin-top: 0px;
-  }
-}
-
-@media only screen and (max-width: 560px) {
-  .main-screen-container {
-    padding-left: 16px;
-    padding-right: 16px;
-  }
-
-  main {
-    display: grid;
-    grid-template-columns: minmax(300px, 575px);
-    grid-template-areas:
-      "Text"
-      "Form";
-    justify-content: center;
-    justify-items: center;
-  }
-
-  h1 {
-    font-size: 36px;
-    line-height: 34px;
-  }
-
-  .text-block {
-    text-align: center;
-    margin-top: 22px;
-  }
-
-  .text-block > {
-    font-size: 14px;
-    line-height: 24px;
-  }
-
-  .form-block {
-    width: 100%;
-    margin-top: 12px;
-    padding: 36px 16px 56px 16px;
-  }
-
-  .contact-us-form {
-    margin-top: 37px;
-    grid-template-columns: none;
-  }
-
-  h3 {
-    font-size: 24px;
-    line-height: 30px;
-  }
-}
 
 /* HEADER CSS */
 header {
@@ -265,129 +184,6 @@ nav > li:hover {
   color: #5bc8af;
 }
 
-@media only screen and (max-width: 1100px) {
-  .divider {
-    display: none;
-  }
-
-  .nav-container {
-    display: grid;
-    align-items: center;
-    justify-items: flex-end;
-  }
-}
-
-@media only screen and (max-width: 560px) {
-  .nav-container {
-    display: none;
-  }
-
-  .mobile-nav-container {
-    display: block;
-  }
-
-  /* burger */
-
-  .menu > li {
-    margin: 0 1rem;
-    overflow: hidden;
-  }
-
-  .menu-button-container {
-    display: none;
-    height: 100%;
-    width: 30px;
-    cursor: pointer;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  #menu-toggle {
-    display: none;
-  }
-
-  .menu-button,
-  .menu-button::before,
-  .menu-button::after {
-    display: block;
-    background-color: #fff;
-    position: absolute;
-    height: 4px;
-    width: 30px;
-    transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
-    border-radius: 2px;
-  }
-
-  .menu-button::before {
-    content: "";
-    margin-top: -8px;
-  }
-
-  .menu-button::after {
-    content: "";
-    margin-top: 8px;
-  }
-
-  #menu-toggle:checked + .menu-button-container .menu-button::before {
-    margin-top: 0px;
-    transform: rotate(405deg);
-  }
-
-  #menu-toggle:checked + .menu-button-container .menu-button {
-    background: rgba(255, 255, 255, 0);
-  }
-
-  #menu-toggle:checked + .menu-button-container .menu-button::after {
-    margin-top: 0px;
-    transform: rotate(-405deg);
-  }
-
-  .menu-button-container {
-    display: flex;
-  }
-  .menu {
-    display: flex;
-    list-style-type: none;
-    padding: 0;
-    position: absolute;
-    top: 18;
-    margin-top: 20px;
-    left: 0;
-    flex-direction: column;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-  }
-  #menu-toggle ~ .menu li {
-    height: 0;
-    margin: 0;
-    border: 0;
-    padding: 0;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  #menu-toggle:checked ~ .menu li {
-    border: 1px solid #1b4e42;
-    height: 40px;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-    padding-left: 20px;
-  }
-  .menu > li {
-    display: flex;
-    justify-content: start;
-    margin: 0;
-    padding: 0.5em 0;
-    width: 100%;
-    color: rgba(255, 255, 255, 0.7);
-    background-color: #1b4e42;
-  }
-  .menu > li:not(:last-child) {
-    border-bottom: 1px solid #1b4e42;
-  }
-  .contact-text {
-    margin-left: 0;
-  }
-}
 
 /* input css */
 div.input-block {
@@ -505,11 +301,6 @@ select > option {
   font-weight: 400;
 }
 
-@media only screen and (max-width: 560px) {
-  select {
-    grid-column: unset;
-  }
-}
 
 /* Main Section End  */
 
@@ -677,193 +468,7 @@ button.arrow-btn:hover {
   background: none;
 }
 
-@media only screen and (max-width: 1024px) {
-  .testimonial-image {
-    width: 215px;
-    height: 215px;
-  }
-  .testimonial-image img {
-    height: 100%;
-  }
-  .quote-img {
-    right: 40px;
-    top: 25px;
-  }
 
-  .testimonial-text {
-    width: 550px;
-    padding: 32px 30px;
-    height: 215px;
-    margin-left: 25px;
-  }
-  .testimonial-text h6 {
-    font-size: 22px;
-    line-height: 30px;
-  }
-  .testimonial-text p {
-    font-size: 16px;
-    line-height: 24px;
-  }
-  .owl-carousel .owl-item .quote-img img {
-    width: 50px;
-    height: 35px;
-  }
-  .owl-theme .owl-nav {
-    top: -140px;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .testimonial-image {
-    width: 198px;
-    height: 198px;
-  }
-
-  .quote-img {
-    right: 30px;
-    top: 20px;
-  }
-
-  .wrapper-with-margin {
-    margin: 0;
-  }
-
-  .testimonial-text {
-    width: 496px;
-    padding: 30px 30px;
-    height: 198px;
-  }
-  .testimonial-text h6 {
-    font-size: 18px;
-    line-height: 28px;
-  }
-  .testimonial-text p {
-    font-size: 14px;
-    line-height: 24px;
-  }
-  .owl-carousel .owl-item .quote-img img {
-    width: 40px;
-    height: 31px;
-  }
-  .owl-theme .owl-nav {
-    display: none;
-  }
-  .contact-text {
-    font-size: 14px;
-    margin-top: 10px;
-  }
-  header {
-    align-items: flex-start;
-  }
-  nav > li {
-    margin-right: 0;
-  }
-  .contact-text {
-    margin-left: 0;
-  }
-  .understand-section{
-	padding-bottom: 90px;
-  }
-}
-
-@media only screen and (max-width: 650px) {
-  .testimonial-image {
-    width: 180px;
-    height: 180px;
-  }
-
-  .quote-img {
-    right: 30px;
-    top: 20px;
-  }
-
-  .testimonial-text {
-    width: 460px;
-    padding: 18px 20px;
-    height: 180px;
-  }
-
-  .testimonial-text p {
-    font-size: 14px;
-    line-height: 22px;
-  }
-  .owl-carousel .owl-item .quote-img img {
-    width: 36px;
-    height: 27px;
-  }
-}
-
-@media only screen and (max-width: 575px) {
-  header {
-    align-items: center;
-  }
-  .images-row {
-    display: none;
-  }
-  .contact-text {
-    font-size: 12px;
-    margin-top: 0;
-  }
-  .testimonial-text {
-    padding: 145px 60px 50px 30px;
-    width: 100%;
-    height: 390px;
-    border-radius: 10px;
-    margin-left: 0;
-  }
-  .testimonial-container {
-    position: relative;
-    flex-direction: column;
-  }
-  .testimonial-image {
-    width: 180px;
-    height: 180px;
-    position: relative;
-    top: 120px;
-    z-index: 1090;
-    left: 30px;
-  }
-  .quote-img {
-    right: 30px;
-    top: 70px;
-  }
-  .owl-carousel .owl-item .quote-img img {
-    width: 60px;
-    height: 47px;
-  }
-}
-@media only screen and (max-width: 460px) {
-  header img {
-    width: 180px;
-    height: 30px;
-  }
-  .primary-btn {
-    width: 100%;
-    justify-content: center;
-  }
-  div.input-block {
-    width: 100%;
-    justify-content: center;
-    grid-column: 1/3;
-  }
-  h3 {
-    font-size: 24px;
-
-    line-height: 32px;
-  }
-  .understand-section {
-    padding-top: 20px;
-    margin-bottom: 0;
-  }
-  .testimonial-text {
-    height: 404px;
-  }
-  .form-block {
-    padding: 25px 16px 40px 16px;
-  }
-  .main-screen-container{
-	padding-bottom: 0;
-  }
-}
 
 /* ORGANIZE SECTION */
 .organize-box {
@@ -995,7 +600,7 @@ button.arrow-btn:hover {
 }
 
 .video-text {
-  width: 40%;
+  width: 45%;
   color: rgba(255, 255, 255, 0.8);
   margin-top: 94px;
 }
@@ -1068,7 +673,59 @@ h2 {
   color: #fff;
 }
 
+footer {
+  background: #eaeaea;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+}
+
+footer ul {
+  text-decoration: none;
+  list-style: none;
+}
+
+footer ul li {
+  border-left: 1px solid #757575;
+  padding: 0 10px;
+  cursor: pointer;
+}
+
+footer ul li:hover {
+  text-decoration: underline;
+}
+
+footer ul li:first-child {
+  border-left: none;
+}
+.footer-wrapper {
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* MEDIA QUERIES */
+
 @media only screen and (max-width: 1100px) {
+  .divider {
+    display: none;
+  }
+
+  .nav-container {
+    display: grid;
+    align-items: center;
+    justify-items: flex-end;
+  }
+  .text-block {
+    margin-top: 120px;
+}
+
+.form-block{
+  margin-top: 30px;
+}
   .container {
     padding-left: 24px;
     padding-right: 24px;
@@ -1142,7 +799,457 @@ h2 {
     transform: translateX(-50%);
   }
 }
+@media only screen and (max-width: 1024px) {
+  .main-screen {
+    background-size: 1024px 1200px;
+    height: 1200px;
+  }
 
+  main {
+    grid-template-columns: minmax(300px, 575px);
+    grid-template-areas:
+        "Text"
+        "Form";
+    justify-content: center;
+    justify-items: center;
+  }
+
+  .text-block {
+    text-align: center;
+    margin-top: 40px;
+  }
+
+  .text-block > {
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+  .form-block {
+    margin-top: 20px;
+  }
+  .testimonial-image {
+    width: 215px;
+    height: 215px;
+  }
+  .testimonial-image img {
+    height: 100%;
+  }
+  .quote-img {
+    right: 40px;
+    top: 25px;
+  }
+
+  .testimonial-text {
+    width: 550px;
+    padding: 32px 30px;
+    height: 215px;
+    margin-left: 25px;
+  }
+  .testimonial-text h6 {
+    font-size: 22px;
+    line-height: 30px;
+  }
+  .testimonial-text p {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .owl-carousel .owl-item .quote-img img {
+    width: 50px;
+    height: 35px;
+  }
+  .owl-theme .owl-nav {
+    top: -140px;
+  }
+
+}
+@media only screen and (max-width: 768px) {
+  .main-screen {
+    background-image: url("./assets/home-background-tablet.png");
+    background-size: 768px 1090px;
+    height: 1090px;
+    background-color: #f5f5f5;
+  }
+
+  .main-screen-container {
+    padding-left: 24px;
+    padding-right: 24px;
+    max-width: 768px;
+  }
+
+  main {
+    grid-template-columns: minmax(300px, 575px);
+    grid-template-areas:
+      "Text"
+      "Form";
+    justify-content: center;
+    justify-items: center;
+  }
+
+  .text-block {
+    text-align: center;
+    margin-top: 38px;
+  }
+
+  .text-block > {
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+  .form-block {
+    margin-top: 0px;
+  }
+  .testimonial-image {
+    width: 198px;
+    height: 198px;
+  }
+
+  .quote-img {
+    right: 30px;
+    top: 20px;
+  }
+
+  .wrapper-with-margin {
+    margin: 0;
+  }
+
+  .testimonial-text {
+    width: 496px;
+    padding: 30px 30px;
+    height: 198px;
+  }
+  .testimonial-text h6 {
+    font-size: 18px;
+    line-height: 28px;
+  }
+  .testimonial-text p {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .owl-carousel .owl-item .quote-img img {
+    width: 40px;
+    height: 31px;
+  }
+  .owl-theme .owl-nav {
+    display: none;
+  }
+  .contact-text {
+    font-size: 14px;
+    margin-top: 10px;
+  }
+  header {
+    align-items: flex-start;
+  }
+  nav > li {
+    margin-right: 0;
+  }
+  .contact-text {
+    margin-left: 0;
+  }
+  .understand-section{
+	padding-bottom: 90px;
+  }
+  .footer-wrapper {
+    justify-content: center;
+    flex-direction: column;
+  }
+}
+@media only screen and (max-width: 650px) {
+  .testimonial-image {
+    width: 180px;
+    height: 180px;
+  }
+
+  .quote-img {
+    right: 30px;
+    top: 20px;
+  }
+
+  .testimonial-text {
+    width: 460px;
+    padding: 18px 20px;
+    height: 180px;
+  }
+
+  .testimonial-text p {
+    font-size: 14px;
+    line-height: 22px;
+  }
+  .owl-carousel .owl-item .quote-img img {
+    width: 36px;
+    height: 27px;
+  }
+}
+@media only screen and (max-width: 576px) {
+  header {
+    align-items: center;
+  }
+  .images-row {
+    display: none;
+  }
+  .contact-text {
+    font-size: 12px;
+    margin-top: 0;
+  }
+  .testimonial-text {
+    padding: 145px 60px 50px 30px;
+    width: 100%;
+    height: 390px;
+    border-radius: 10px;
+    margin-left: 0;
+  }
+  .testimonial-container {
+    position: relative;
+    flex-direction: column;
+  }
+  .testimonial-image {
+    width: 180px;
+    height: 180px;
+    position: relative;
+    top: 120px;
+    z-index: 1090;
+    left: 30px;
+  }
+  .quote-img {
+    right: 30px;
+    top: 70px;
+  }
+  .owl-carousel .owl-item .quote-img img {
+    width: 60px;
+    height: 47px;
+  }
+  .understand-section{
+    padding-top: 20px;
+  }
+  .video{
+    height: 425px;
+    width: 750px;
+    object-fit: cover;
+  }
+}
+@media only screen and (max-width: 560px) {
+  .nav-container {
+    display: none;
+  }
+
+  .mobile-nav-container {
+    display: block;
+  }
+
+  /* burger */
+
+  .menu > li {
+    margin: 0 1rem;
+    overflow: hidden;
+  }
+
+  .menu-button-container {
+    display: none;
+    height: 100%;
+    width: 30px;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #menu-toggle {
+    display: none;
+  }
+
+  .menu-button,
+  .menu-button::before,
+  .menu-button::after {
+    display: block;
+    background-color: #fff;
+    position: absolute;
+    height: 4px;
+    width: 30px;
+    transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    border-radius: 2px;
+  }
+
+  .menu-button::before {
+    content: "";
+    margin-top: -8px;
+  }
+
+  .menu-button::after {
+    content: "";
+    margin-top: 8px;
+  }
+
+  #menu-toggle:checked + .menu-button-container .menu-button::before {
+    margin-top: 0px;
+    transform: rotate(405deg);
+  }
+
+  #menu-toggle:checked + .menu-button-container .menu-button {
+    background: rgba(255, 255, 255, 0);
+  }
+
+  #menu-toggle:checked + .menu-button-container .menu-button::after {
+    margin-top: 0px;
+    transform: rotate(-405deg);
+  }
+
+  .menu-button-container {
+    display: flex;
+  }
+  .menu {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    position: absolute;
+    top: 18;
+    margin-top: 20px;
+    left: 0;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  #menu-toggle ~ .menu li {
+    height: 0;
+    margin: 0;
+    border: 0;
+    padding: 0;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  #menu-toggle:checked ~ .menu li {
+    border: 1px solid #1b4e42;
+    height: 40px;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    padding-left: 20px;
+  }
+  .menu > li {
+    display: flex;
+    justify-content: start;
+    margin: 0;
+    padding: 0.5em 0;
+    width: 100%;
+    color: rgba(255, 255, 255, 0.7);
+    background-color: #1b4e42;
+  }
+  .menu > li:not(:last-child) {
+    border-bottom: 1px solid #1b4e42;
+  }
+  .contact-text {
+    margin-left: 0;
+  }
+  select {
+    grid-column: unset;
+  }
+  .main-screen-container {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  main {
+    display: grid;
+    grid-template-columns: minmax(300px, 575px);
+    grid-template-areas:
+      "Text"
+      "Form";
+    justify-content: center;
+    justify-items: center;
+  }
+
+  h1 {
+    font-size: 36px;
+    line-height: 40px;
+  }
+
+  .text-block {
+    text-align: center;
+    margin-top: 22px;
+  }
+
+  .text-block > {
+    font-size: 14px;
+    line-height: 24px;
+  }
+
+  .form-block {
+    width: 100%;
+    margin-top: 12px;
+    padding: 36px 16px 56px 16px;
+  }
+
+  .contact-us-form {
+    margin-top: 37px;
+    grid-template-columns: none;
+  }
+
+  h3 {
+    font-size: 24px;
+    line-height: 30px;
+  }
+}
+@media only screen and (max-width: 460px) {
+  header img {
+    width: 180px;
+    height: 30px;
+  }
+  .primary-btn {
+    width: 100%;
+    justify-content: center;
+  }
+  div.input-block {
+    width: 100%;
+    justify-content: center;
+    grid-column: 1/3;
+  }
+  h3 {
+    font-size: 24px;
+
+    line-height: 32px;
+  }
+  .understand-section {
+    padding-top: 20px;
+    margin-bottom: 0;
+  }
+  .testimonial-text {
+    height: 404px;
+  }
+  .form-block {
+    padding: 25px 16px 40px 16px;
+  }
+  .main-screen-container{
+	padding-bottom: 0;
+  }
+  .video-text {
+    margin-top: 80px;
+    margin-bottom: 125px;
+}
+h2 {
+  font-size: 36px;
+  line-height: 48px;
+}
+.video-text li{
+  font-size: 14px;
+    line-height: 24px;
+}
+#play {
+  top: -10px;
+  width: 128px;
+  height: 128px;
+}
+
+#play img {
+  width: 100px;
+  height: 100px;
+}
+#play:hover {
+  width: 150px;
+  height: 150px;
+}
+}
+@media only screen and (max-width: 400px) {
+  footer {
+    font-size: 12px;
+    line-height: 22px;
+  }
+}
 @media only screen and (max-width: 380px) {
   .container {
     padding-left: 16px;
@@ -1169,53 +1276,7 @@ h2 {
     margin-bottom: -100px;
   }
 
-  #play {
-    top: -10px;
-    width: 128px;
-    height: 128px;
-  }
-
-  #play img {
-    width: 100px;
-    height: 100px;
-  }
 }
-
-footer {
-  background: #eaeaea;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-}
-
-footer ul {
-  text-decoration: none;
-  list-style: none;
-}
-
-footer ul li {
-  border-left: 1px solid #757575;
-  padding: 0 10px;
-  cursor: pointer;
-}
-
-footer ul li:hover {
-  text-decoration: underline;
-}
-
-footer ul li:first-child {
-  border-left: none;
-}
-.footer-wrapper {
-  height: 100px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-
 @media only screen and (max-width: 360px) {
   .main-screen {
     background-image: url("./assets/home-background-mobile.png");
@@ -1226,18 +1287,8 @@ footer ul li:first-child {
     background-color: white;
 	padding-bottom: 0;
   }
-}
-
-@media only screen and (max-width: 768px) {
-  .footer-wrapper {
-    justify-content: center;
-    flex-direction: column;
+  footer{
+    font-size: 11px;
   }
 }
 
-@media only screen and (max-width: 400px) {
-  footer {
-    font-size: 12px;
-    line-height: 22px;
-  }
-}
