--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
   font-family: "Montserrat", sans-serif;
 }
 
-body{
+html,
+body {
+  position: relative;
+  height: 100%;
   overflow-x: hidden;
 }
 /* Main Section */
