--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
   position: relative;
   height: 100%;
   overflow-x: hidden;
+touch-action: none;
+-ms-touch-action: none;
 }
 /* Main Section */
 
