--- a/style.css
+++ b/style.css
@@ -12,8 +12,10 @@ body {
   position: relative;
   height: 100%;
   overflow-x: hidden;
-touch-action: none;
--ms-touch-action: none;
+}
+
+body{
+	 touch-action: pan-x pan-y;
 }
 /* Main Section */
 
