--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@ body {
   position: relative;
   height: 100%;
   overflow-x: hidden;
+  touch-action: none;
+-ms-touch-action: none;
 }
-
 /* Main Section */
 
 .container,
@@ -72,6 +73,8 @@ h1 {
     text-stroke: 1px #fff;
     text-shadow: none;
     font-weight: 800;
+
+    
   }
 }
 
@@ -322,6 +325,7 @@ span.outline-text {
   color: white;
   text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
     -1px 1px 0 #000, 1px 1px 0 #000;
+ 
 }
 
 .text-row p {
@@ -863,6 +867,10 @@ footer ul li:first-child {
   }
   .owl-theme .owl-nav {
     top: -140px;
+  }
+  .marked-h1{
+    color: #1f5146;
+    text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
   }
 
 }
