--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ h4 {
   color: #fff;
   position: relative;
   -webkit-transition: all 0.3s;
+	-webkit-transition: 190ms width linear; 
 	-moz-transition: all 0.3s;
 	transition: all 0.3s;
 }
