--- a/style.css
+++ b/style.css
@@ -116,7 +116,6 @@ h4 {
   color: #fff;
   position: relative;
   -webkit-transition: all 0.3s;
-	-webkit-transition: 190ms width linear; 
 	-moz-transition: all 0.3s;
 	transition: all 0.3s;
 }
@@ -126,6 +125,7 @@ h4 {
 	position: absolute;
 	z-index: -1;
 	-webkit-transition: all 0.3s;
+  -webkit-transition: 190ms width linear; 
 	-moz-transition: all 0.3s;
 	transition: all 0.3s;
 }
@@ -259,14 +259,6 @@ div.input-block input:focus {
 div.input-block input:focus + span.placeholder {
   color: #fff;
 }
-
-/* div.input-block input:invalid {
-	border-color: #ff7777;
-}
-
-div.input-block input:invalid + span.placeholder {
-	color: #ff7777;
-} */
 
 div.input-block input.active {
   border-color: #ff7777;
@@ -808,7 +800,80 @@ footer ul li:first-child {
   width: 228px;
   height: 228px;
 }
+.playvideo{
+  width: 50vw;
+}
 
+/* ========== CUSTOM MODALS ============*/
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 9999; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+}
+
+/* Add Animation */
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+/* The Close Button */
+
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+.close{
+  position: absolute;
+    right: 0px;
+    z-index: 9999;
+    font-size: 40px;
+    top: 5px;
+    font-weight: 500;
+    color: black;
+    background: white;
+    opacity: 1;
+    padding: 0px;
+    width: 40px;
+    height: 40px;
+    margin: 0 auto;
+    text-align: center;
+    border-radius: 50%;
+    font-weight: 500;
+}
 
 /* MEDIA QUERIES */
 
@@ -901,6 +966,9 @@ footer ul li:first-child {
     left: 50%;
     transform: translateX(-50%);
   }
+  .close {
+    right: -12px;
+    top: -10px;}
 }
 @media only screen and (max-width: 1024px) {
   .main-screen {
@@ -1062,6 +1130,9 @@ footer ul li:first-child {
   }
   .text-row {
     margin-bottom: 40px;
+}
+.playvideo {
+  width: 80vw;
 }
 }
 @media only screen and (max-width: 650px) {
